<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/mensaje"
                android:layout_width="233dp"
                android:maxLength="20"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_height="44dp" />

            <Button
                android:id="@+id/VisualizarBoton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/visualizar" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/posicion_texto" />








            <Button
                android:id="@+id/justificadoBoton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/cambiar_justificativo" />



            <Button
                android:id="@+id/brilloBoton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/brillo1" />





            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/TransicionTitulo"
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/transicion_e_s" />
                <TextView
                    android:id="@+id/TransicionNumero"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/TransicionSB"
                android:layout_width="299dp"
                android:layout_height="17dp"
                android:layout_marginBottom="20dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/velocidadTitulo"
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/velocidad_de_escritura" />
                <TextView
                    android:id="@+id/velocidadNumero"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:text="" />


            </LinearLayout>



            <SeekBar
                android:id="@+id/VelocidadSB"
                android:layout_width="302dp"
                android:layout_height="17dp"
                android:layout_marginBottom="10dp"
                 />

            <Button
                android:id="@+id/estiloBoton"
                android:layout_marginBottom="50dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/cambiar_estilo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/predeterminadoBoton"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/predeterminado" />

                <Button
                    android:id="@+id/resetBoton"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reiniciar" />
                <Button
                    android:id="@+id/guardarBoton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>