<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"

    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/iniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tablero_led"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.034" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginBottom="30dp"
            android:background="#9999CC"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="288dp"
            android:layout_height="102dp"
            android:layout_marginBottom="70dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_suscipit_cum_distinctio_libero_maiores_assumenda_deleniti_doloribus_optio_delectus_veniam_nesciunt_reprehenderit_laborum_rerum_alias_eaque_amet_non_aperiam_eligendi_molestias"
            app:layout_constraintBottom_toTopOf="@+id/imageView2" />


    </LinearLayout>

    <Button
        android:id="@+id/iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

</androidx.constraintlayout.widget.ConstraintLayout>